--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .flex-grid {
+}
+
+.winner, .current-player {
+  margin: 15px;
+  font-size: 1.3em;
 }
 
 .row {
@@ -30,4 +36,17 @@
   align-items: center;
   padding: 10px;
   font-size: 1.3em;
+}
+
+.button {
+  margin: 15px;
+
+  display: inline-block;
+  border-radius: 3px;
+  padding: 0.5rem 0;
+  margin: 0.5rem 0.25rem 0rem 0.25rem;
+  width: 7rem;
+  background: transparent;
+  color: black;
+  border: 1px solid black;
 }
